<resources>
    
	<string name="app_name" translatable="false">Robok IDE</string>
	
	<!-- common words section -->
	<string name="common_word_back">Back</string>
	<string name="common_word_result">Result</string>
	<string name="common_word_run">Run</string>
	<string name="common_word_code">Code</string>
	<string name="common_word_logs">Logs</string>
	<string name="common_word_output">Output</string>
	<string name="common_word_end">End</string>
	<string name="common_word_settings">Settings</string>
	<string name="common_word_ok">OK</string>
	<string name="common_word_cancel">CANCEL</string>
	<string name="common_word_next">Next</string>
	<string name="common_word_undo">Undo</string>
	<string name="common_word_redo">Redo</string>
	<!-- end section -->
	
	<!-- titles section -->
	<string name="title_create_project">Create project</string>
	<string name="title_open_project">Open project</string>
	<string name="title_open_editor">Open editor</string>
	<string name="title_debug_title">An error occured</string>
	<string name="title_select_theme">Select theme</string>
	<string name="title_about">About</string>
	<string name="title_opengl">Open GL 2.0 Test</string>
	<!-- end section -->
	
	<!-- messages section -->
	<string name="message_compiled">Your code has been compiled!</string>
	<!-- end section -->
	
	<!-- go to section -->
	<string name="go_to_outputs">Go to outputs</string>
	<!-- end section -->
	
	<!-- hints section -->
	<string name="hint_project_name">Project name</string>
	<string name="hint_package_name">Package name</string>
	<!-- end section -->
	
	<!-- settings section -->
	<string name="settings_editor_title">Code Editor Settings</string>
	<string name="settings_editor_description">Some code editor settings.</string>
	<string name="settings_editor_theme_title">Code Editor Theme</string>
	<string name="settings_editor_theme_description">Change the code editor theme.</string>
	<!-- end section -->
	
	<!-- texts section -->
	<string name="text_diagnostic">Diagnostic</string>
	<string name="text_logs">Logs</string>
	<!-- ene section -->
</resources>
